--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,11 @@
     "airbnb-typescript",
     "airbnb/hooks",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    // Recommended to be added last after all other "recommended" tools - See https://nextjs.org/docs/basic-features/eslint#disabling-rules
+    "plugin:@next/next/recommended"
+    // Enforce stronger rules for Core Web Vitals - See https://nextjs.org/docs/basic-features/eslint#core-web-vitals
+    // "next/core-web-vitals"
   ],
   "rules": {
     // Disable line length checks, because the IDE is already configured to warn about it, and it's a waste of time to check for lines that are too long, especially in comments (like this one!)
@@ -78,13 +82,6 @@
     "@typescript-eslint/no-unsafe-member-access": "warn",
     // Too restrictive rule
     "@typescript-eslint/restrict-template-expressions": "warn",
-    "react/function-component-definition": [
-      2,
-      {
-        "namedComponents": "arrow-function",
-        "unnamedComponents": "arrow-function"
-      }
-    ],
     "import/no-extraneous-dependencies": [
       "error",
       {
