--- a/package.json
+++ b/package.json
@@ -5,22 +5,32 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "start:dev": "next dev --port 8888",
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.1.1",
+    "@emotion/memoize": "^0.7.5",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.6.0",
+    "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^0.1.6",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "storybook": "^6.4.19",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@emotion/babel-plugin": "^11.7.2",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/jest": "^11.7.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -34,9 +44,14 @@
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-loader": "^8.2.4",
-    "eslint": "8.12.0",
-    "eslint-config-airbnb-typescript": "^16.1.4",
-    "eslint-config-next": "12.1.1",
+    "eslint": "<8.0.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "^15.0.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.3",
+    "eslint-plugin-react-hooks": "4.3.0",
     "sb": "^6.4.19",
     "typescript": "4.6.3"
   }
