--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^0.1.6",
+    "@types/use-persisted-state": "^0.3.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
