--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "@emotion/styled": "^11.6.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^0.1.6",
+    "@styled-system/css": "^5.1.5",
+    "@styled-system/should-forward-prop": "^5.1.5",
     "@types/use-persisted-state": "^0.3.1",
+    "@types/uuid": "^8.3.4",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "storybook": "^6.4.19",
     "styled-components": "^5.3.5",
-    "use-persisted-state": "^0.3.3"
+    "styled-system": "^5.1.5",
+    "use-persisted-state": "^0.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -42,6 +47,8 @@
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/styled-components": "^5.1.15",
+    "@types/styled-system": "^5.1.14",
+    "@types/styled-system__css": "^5.0.16",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "babel-loader": "^8.2.4",
