feat: add breadcrumps and default note in dashboard section

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-accordion": "^0.1.6",
+    "@radix-ui/react-dialog": "^0.1.7",
     "@styled-system/css": "^5.1.5",
     "@styled-system/should-forward-prop": "^5.1.5",
     "@types/use-persisted-state": "^0.3.1",
