--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.38.0",
     "storybook": "^6.4.19",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5",
@@ -61,7 +62,6 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
-    "sb": "^6.4.19",
     "typescript": "4.6.3"
   }
 }
